--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div style = "text-align: center">
+<h1 class = "background-color: aqua"> {{title}}</h1>
+</div>
+
 
 <ngb-tabset>
   <ngb-tab title="Stack">
@@ -9,6 +13,8 @@
   <ngb-tab title = "Queue">
     <ng-template ngbTabContent>
 	Queue Implementation
+	<app-stackqueue></app-stackqueue>
+	
     </ng-template>
   </ngb-tab>
 
