Stack bug fixes, new Queue component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
   <ngb-tab title = "Queue">
     <ng-template ngbTabContent>
 	Queue Implementation
-	<app-stackqueue></app-stackqueue>
+	<app-queuecomponent></app-queuecomponent>
 	
     </ng-template>
   </ngb-tab>
