--- a/src/app/queuecomponent/queuecomponent.component.html
+++ b/src/app/queuecomponent/queuecomponent.component.html
@@ -1,26 +1,42 @@
+<br>
 <div class="container-fluid">
 	<div class = "row bg-light">
 		<div class = "col-3 m-5">
 		<ul class="list-group shadow-sm mb-5 bg-white rounded">
-		  <li class="list-group-item list-group-item-action" *ngFor="let item of (stack?stack.data:[])">{{item}}</li>
+		  <li class="list-group-item list-group-item-action" *ngFor="let item of (queue?queue.underlyingData:[])">{{item}}</li>
 		</ul>
 		</div>
 	</div>
+	<br>
 	<div class="row">
 		<div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
 		  <div class="input-group mr-2">
 		    <div class="input-group-prepend">
 				<button type="button" class = "btn btn-primary" (click) = "enqueue()">Enqueue</button>
 		    </div>
-		    <input type="text" class="form-control" placeholder="Input group example" [(ngModel)]="inputToEnqueue" aria-label="Input group example" aria-describedby="btnGroupAddon">
+		    <input type="text" class="form-control" [(ngModel)]="inputToEnqueue" aria-label="Input group example" aria-describedby="btnGroupAddon">
 		  </div>
 		    <button type="button" class="btn btn-primary  mr-2" (click) = "dequeue()">Dequeue</button>
 		  <div class="input-group">
 		    <div class="input-group-prepend">
-			    <button type="button" class="btn btn-primary" (click) = "peek()">Peek</button>
+				<button type="button" class="btn btn-primary" (click) = "peek()">Peek</button>
+				<input type = "text" class="form-control" value =  "{{peekValue}}" readonly>
 		    </div>
-			<span type="text" class="input-group">{{peekValue}}</span>
 		  </div>
+		  <button type="button" class = "btn btn-primary mr-2" (click) = "clear()">Clear Queue</button>
 		</div>
 	</div>
+	<br>
+	<div class = "row">
+		<p *ngIf = 'queueEmpty' >
+  			<ngb-alert [dismissible]="false">
+    		Queue is empty.
+  			</ngb-alert>
+		</p>
+		<p *ngIf = 'dequeueClicked' >
+			Dequeued Value : <input type = "text" class="form-control" value =  "{{dequeueValue}}" readonly>
+		</p>
+	</div>
+	<br>
+
 </div>	
