--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 
   <ngb-tab title="ArrayList">
     <ng-template ngbTabContent>
-	Array List Implementation
+	<app-array-list></app-array-list>
     </ng-template>
   </ngb-tab>
 
