--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 
   <ngb-tab title="LinkedList">
     <ng-template ngbTabContent>
-    Linked List Implementation
+      <app-linked-list></app-linked-list>
     </ng-template>
   </ngb-tab>
 
