--- a/src/app/queuecomponent/queuecomponent.component.html
+++ b/src/app/queuecomponent/queuecomponent.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
 	<div class = "row bg-light">
 		<div class = "col-3 m-5">
-		<ul class="list-group shadow-sm mb-5 bg-white rounded">
+		<ul class="list-group list-group-horizontal shadow-sm mb-5 bg-white rounded">
 		  <li class="list-group-item list-group-item-action" *ngFor="let item of (queue?queue.underlyingData:[])">{{item}}</li>
 		</ul>
 		</div>
