LinkedList Implementation using D3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
 
   <ngb-tab title="Binary Search Tree">
     <ng-template ngbTabContent>
-  	Binary Search Tree Implementation
+  	<app-binarytree></app-binarytree>
     </ng-template>
   </ngb-tab>
 </ngb-tabset>
