--- a/src/app/stackqueue/stackqueue.component.html
+++ b/src/app/stackqueue/stackqueue.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
 	<div class = "row bg-light">
 		<div class = "col-3 m-5">
-		<ul class="list-group shadow-sm mb-5 bg-white rounded">
+		<ul class="list-group shadow-sm mb-5 bg-white rounded column steps" >
 		  <li class="list-group-item list-group-item-action" *ngFor="let item of (stack?stack.data:[])">{{item}}</li>
 		</ul>
 		</div>
