--- a/src/app/linked-list/linked-list.component.html
+++ b/src/app/linked-list/linked-list.component.html
@@ -76,7 +76,7 @@
 	</div>
 </div>
 	<br>
-<div class = "Container-fluid" style = "background-color: #eee">
+<div class = "Container-fluid">
 	<div id="footer">
 		<!-- <svg width="660" height="500">
 			<g *ngIf="descendentSliced.length > 0;" transform="translate(90,20)">
